--- a/index.ipynb
+++ b/index.ipynb
@@ -33,8 +33,6 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/Users/matthew.mitchell/anaconda3/lib/python3.6/site-packages/h5py/__init__.py:36: FutureWarning: Conversion of the second argument of issubdtype from `float` to `np.floating` is deprecated. In future, it will be treated as `np.float64 == np.dtype(float).type`.\n",
-      "  from ._conv import register_converters as _register_converters\n",
       "Using TensorFlow backend.\n"
      ]
     }
@@ -73,11 +71,242 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(495, 19)\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Page total likes</th>\n",
+       "      <th>Type</th>\n",
+       "      <th>Category</th>\n",
+       "      <th>Post Month</th>\n",
+       "      <th>Post Weekday</th>\n",
+       "      <th>Post Hour</th>\n",
+       "      <th>Paid</th>\n",
+       "      <th>Lifetime Post Total Reach</th>\n",
+       "      <th>Lifetime Post Total Impressions</th>\n",
+       "      <th>Lifetime Engaged Users</th>\n",
+       "      <th>Lifetime Post Consumers</th>\n",
+       "      <th>Lifetime Post Consumptions</th>\n",
+       "      <th>Lifetime Post Impressions by people who have liked your Page</th>\n",
+       "      <th>Lifetime Post reach by people who like your Page</th>\n",
+       "      <th>Lifetime People who have liked your Page and engaged with your post</th>\n",
+       "      <th>comment</th>\n",
+       "      <th>like</th>\n",
+       "      <th>share</th>\n",
+       "      <th>Total Interactions</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>139441</td>\n",
+       "      <td>Photo</td>\n",
+       "      <td>2</td>\n",
+       "      <td>12</td>\n",
+       "      <td>4</td>\n",
+       "      <td>3</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>2752</td>\n",
+       "      <td>5091</td>\n",
+       "      <td>178</td>\n",
+       "      <td>109</td>\n",
+       "      <td>159</td>\n",
+       "      <td>3078</td>\n",
+       "      <td>1640</td>\n",
+       "      <td>119</td>\n",
+       "      <td>4</td>\n",
+       "      <td>79.0</td>\n",
+       "      <td>17.0</td>\n",
+       "      <td>100</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>139441</td>\n",
+       "      <td>Status</td>\n",
+       "      <td>2</td>\n",
+       "      <td>12</td>\n",
+       "      <td>3</td>\n",
+       "      <td>10</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>10460</td>\n",
+       "      <td>19057</td>\n",
+       "      <td>1457</td>\n",
+       "      <td>1361</td>\n",
+       "      <td>1674</td>\n",
+       "      <td>11710</td>\n",
+       "      <td>6112</td>\n",
+       "      <td>1108</td>\n",
+       "      <td>5</td>\n",
+       "      <td>130.0</td>\n",
+       "      <td>29.0</td>\n",
+       "      <td>164</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>139441</td>\n",
+       "      <td>Photo</td>\n",
+       "      <td>3</td>\n",
+       "      <td>12</td>\n",
+       "      <td>3</td>\n",
+       "      <td>3</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>2413</td>\n",
+       "      <td>4373</td>\n",
+       "      <td>177</td>\n",
+       "      <td>113</td>\n",
+       "      <td>154</td>\n",
+       "      <td>2812</td>\n",
+       "      <td>1503</td>\n",
+       "      <td>132</td>\n",
+       "      <td>0</td>\n",
+       "      <td>66.0</td>\n",
+       "      <td>14.0</td>\n",
+       "      <td>80</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>139441</td>\n",
+       "      <td>Photo</td>\n",
+       "      <td>2</td>\n",
+       "      <td>12</td>\n",
+       "      <td>2</td>\n",
+       "      <td>10</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>50128</td>\n",
+       "      <td>87991</td>\n",
+       "      <td>2211</td>\n",
+       "      <td>790</td>\n",
+       "      <td>1119</td>\n",
+       "      <td>61027</td>\n",
+       "      <td>32048</td>\n",
+       "      <td>1386</td>\n",
+       "      <td>58</td>\n",
+       "      <td>1572.0</td>\n",
+       "      <td>147.0</td>\n",
+       "      <td>1777</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>139441</td>\n",
+       "      <td>Photo</td>\n",
+       "      <td>2</td>\n",
+       "      <td>12</td>\n",
+       "      <td>2</td>\n",
+       "      <td>3</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>7244</td>\n",
+       "      <td>13594</td>\n",
+       "      <td>671</td>\n",
+       "      <td>410</td>\n",
+       "      <td>580</td>\n",
+       "      <td>6228</td>\n",
+       "      <td>3200</td>\n",
+       "      <td>396</td>\n",
+       "      <td>19</td>\n",
+       "      <td>325.0</td>\n",
+       "      <td>49.0</td>\n",
+       "      <td>393</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   Page total likes    Type  Category  Post Month  Post Weekday  Post Hour  \\\n",
+       "0            139441   Photo         2          12             4          3   \n",
+       "1            139441  Status         2          12             3         10   \n",
+       "2            139441   Photo         3          12             3          3   \n",
+       "3            139441   Photo         2          12             2         10   \n",
+       "4            139441   Photo         2          12             2          3   \n",
+       "\n",
+       "   Paid  Lifetime Post Total Reach  Lifetime Post Total Impressions  \\\n",
+       "0   0.0                       2752                             5091   \n",
+       "1   0.0                      10460                            19057   \n",
+       "2   0.0                       2413                             4373   \n",
+       "3   1.0                      50128                            87991   \n",
+       "4   0.0                       7244                            13594   \n",
+       "\n",
+       "   Lifetime Engaged Users  Lifetime Post Consumers  \\\n",
+       "0                     178                      109   \n",
+       "1                    1457                     1361   \n",
+       "2                     177                      113   \n",
+       "3                    2211                      790   \n",
+       "4                     671                      410   \n",
+       "\n",
+       "   Lifetime Post Consumptions  \\\n",
+       "0                         159   \n",
+       "1                        1674   \n",
+       "2                         154   \n",
+       "3                        1119   \n",
+       "4                         580   \n",
+       "\n",
+       "   Lifetime Post Impressions by people who have liked your Page  \\\n",
+       "0                                               3078              \n",
+       "1                                              11710              \n",
+       "2                                               2812              \n",
+       "3                                              61027              \n",
+       "4                                               6228              \n",
+       "\n",
+       "   Lifetime Post reach by people who like your Page  \\\n",
+       "0                                              1640   \n",
+       "1                                              6112   \n",
+       "2                                              1503   \n",
+       "3                                             32048   \n",
+       "4                                              3200   \n",
+       "\n",
+       "   Lifetime People who have liked your Page and engaged with your post  \\\n",
+       "0                                                119                     \n",
+       "1                                               1108                     \n",
+       "2                                                132                     \n",
+       "3                                               1386                     \n",
+       "4                                                396                     \n",
+       "\n",
+       "   comment    like  share  Total Interactions  \n",
+       "0        4    79.0   17.0                 100  \n",
+       "1        5   130.0   29.0                 164  \n",
+       "2        0    66.0   14.0                  80  \n",
+       "3       58  1572.0  147.0                1777  \n",
+       "4       19   325.0   49.0                 393  "
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "#Your code here; load the dataset and drop rows with missing values. Then preview the data."
+    "#Your code here; load the dataset and drop rows with missing values. Then preview the data.\n",
+    "data = pd.read_csv(\"dataset_Facebook.csv\", sep = \";\", header=0)\n",
+    "data = data.dropna()\n",
+    "print(np.shape(data))\n",
+    "data.head()"
    ]
   },
   {
@@ -124,13 +353,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
     "#Your code here; define X and y.\n",
-    "X = \n",
-    "Y = "
+    "X0 = data[\"Page total likes\"]\n",
+    "X0= (X0-np.mean(X0))/(np.std(X0))\n",
+    "X1 = data[\"Type\"]\n",
+    "dummy_X1= pd.get_dummies(X1)\n",
+    "X2 = data[\"Category\"]\n",
+    "dummy_X2= pd.get_dummies(X2)\n",
+    "X3 = data[\"Post Month\"]\n",
+    "X3= (X3-np.mean(X3))/(np.std(X3))\n",
+    "X4 = data[\"Post Weekday\"]\n",
+    "X4= (X4-np.mean(X4))/(np.std(X4))\n",
+    "X5 = data[\"Post Hour\"]\n",
+    "X5= (X5-np.mean(X5))/(np.std(X5))\n",
+    "X6 = data[\"Paid\"]\n",
+    "X = pd.concat([X0, dummy_X1, dummy_X2, X3, X4, X5, X6], axis=1)\n",
+    "Y = data['like']"
    ]
   },
   {
@@ -161,7 +403,27 @@
    "cell_type": "code",
    "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "WARNING: Logging before flag parsing goes to stderr.\n",
+      "W0703 15:04:33.102629   404 deprecation_wrapper.py:119] From C:\\Users\\kylej\\Anaconda3\\lib\\site-packages\\keras\\backend\\tensorflow_backend.py:74: The name tf.get_default_graph is deprecated. Please use tf.compat.v1.get_default_graph instead.\n",
+      "\n",
+      "W0703 15:04:33.113630   404 deprecation_wrapper.py:119] From C:\\Users\\kylej\\Anaconda3\\lib\\site-packages\\keras\\backend\\tensorflow_backend.py:517: The name tf.placeholder is deprecated. Please use tf.compat.v1.placeholder instead.\n",
+      "\n",
+      "W0703 15:04:33.115630   404 deprecation_wrapper.py:119] From C:\\Users\\kylej\\Anaconda3\\lib\\site-packages\\keras\\backend\\tensorflow_backend.py:4138: The name tf.random_uniform is deprecated. Please use tf.random.uniform instead.\n",
+      "\n",
+      "W0703 15:04:33.130630   404 deprecation_wrapper.py:119] From C:\\Users\\kylej\\Anaconda3\\lib\\site-packages\\keras\\optimizers.py:790: The name tf.train.Optimizer is deprecated. Please use tf.compat.v1.train.Optimizer instead.\n",
+      "\n",
+      "W0703 15:04:33.202630   404 deprecation_wrapper.py:119] From C:\\Users\\kylej\\Anaconda3\\lib\\site-packages\\keras\\backend\\tensorflow_backend.py:986: The name tf.assign_add is deprecated. Please use tf.compat.v1.assign_add instead.\n",
+      "\n",
+      "W0703 15:04:33.212630   404 deprecation_wrapper.py:119] From C:\\Users\\kylej\\Anaconda3\\lib\\site-packages\\keras\\backend\\tensorflow_backend.py:973: The name tf.assign is deprecated. Please use tf.compat.v1.assign instead.\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "#Code provided; building an initial model\n",
     "np.random.seed(123)\n",
@@ -246,29 +508,44 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
-    "#Your code here: redefine Y after normalizing the data."
+    "#Your code here: redefine Y after normalizing the data.\n",
+    "Y = (data[\"like\"]-np.mean(data[\"like\"]))/(np.std(data[\"like\"]))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
-    "#Your code here; create training and validation sets as before. Use random seed 123."
+    "#Your code here; create training and validation sets as before. Use random seed 123.\n",
+    "data_clean = pd.concat([X, Y], axis=1)\n",
+    "np.random.seed(123)\n",
+    "train, validation = train_test_split(data_clean, test_size=0.2)\n",
+    "X_val = validation.iloc[:,0:12]\n",
+    "Y_val = validation.iloc[:,12]\n",
+    "X_train = train.iloc[:,0:12]\n",
+    "Y_train = train.iloc[:,12]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
-    "#Your code here; rebuild a simple model using a relu layer followed by a linear layer. (See our code snippet above!)"
+    "#Your code here; rebuild a simple model using a relu layer followed by a linear layer. (See our code snippet above!)\n",
+    "np.random.seed(123)\n",
+    "model = Sequential()\n",
+    "model.add(layers.Dense(8, input_dim=12, activation='relu'))\n",
+    "model.add(layers.Dense(1, activation = 'linear'))\n",
+    "model.compile(optimizer= \"sgd\" ,loss='mse',metrics=['mse'])\n",
+    "hist = model.fit(X_train, Y_train, batch_size=32, \n",
+    "                 epochs=100, validation_data = (X_val, Y_val), verbose = 0)"
    ]
   },
   {
@@ -286,16 +563,16 @@
     {
      "data": {
       "text/plain": [
-       "[1.2408857164960918,\n",
-       " 1.175498196874002,\n",
-       " 1.1352486694701995,\n",
-       " 1.1083890091289172,\n",
-       " 1.0902567186740915,\n",
-       " 1.0721662248475383,\n",
-       " 1.0611894782444444,\n",
-       " 1.0505248789835457,\n",
-       " 1.042567062408033,\n",
-       " 1.0360946251888468]"
+       "[1.2408857008423468,\n",
+       " 1.1754960872308173,\n",
+       " 1.1352448582348198,\n",
+       " 1.1083863654521982,\n",
+       " 1.0902548394720963,\n",
+       " 1.0721652073541073,\n",
+       " 1.0611876578945103,\n",
+       " 1.0505221212151075,\n",
+       " 1.0425649404224724,\n",
+       " 1.0360854624798803]"
       ]
      },
      "execution_count": 11,
@@ -323,8 +600,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "MSE_train: 0.9279475664337523\n",
-      "MSE_val: 0.9317562611051917\n"
+      "MSE_train: 0.9278623358179302\n",
+      "MSE_val: 0.9317985898693883\n"
      ]
     }
    ],
@@ -399,8 +676,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.9266351379758461\n",
-      "0.9474339752163196\n"
+      "0.9262989788459631\n",
+      "0.9474002419439147\n"
      ]
     }
    ],
@@ -462,8 +739,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.9274710945931817\n",
-      "0.9463006239264359\n"
+      "0.9274412115635564\n",
+      "0.9462887458200231\n"
      ]
     }
    ],
@@ -524,8 +801,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.914450642739685\n",
-      "0.9437157484784983\n"
+      "0.9144474124935457\n",
+      "0.9436258869020225\n"
      ]
     }
    ],
@@ -579,8 +856,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.9113685285012638\n",
-      "0.9444777470972421\n"
+      "0.9115571738486954\n",
+      "0.9430130251085488\n"
      ]
     }
    ],
@@ -635,8 +912,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.8188327426055082\n",
-      "0.9218409795298302\n"
+      "0.8153018143347425\n",
+      "0.9166689970151136\n"
      ]
     }
    ],
@@ -691,7 +968,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.4"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
